# meilisearch

.github/workflows/: rust.yml
meilisearch-auth/: Cargo.toml
meilisearch-http/: Cargo.toml
meilisearch-lib/: Cargo.toml
