[package]
name = "meilisearch-auth"
version = "0.26.0"
edition = "2021"

[dependencies]
enum-iterator = "0.7.0"
heed = { git = "https://github.com/Kerollmops/heed", tag = "v0.12.1" }
sha2 = "0.10.2"
meilisearch-error = { path = "../meilisearch-error" }
serde_json = { version = "1.0.79", features = ["preserve_order"] }
time = { version = "0.3.7", features = ["serde-well-known", "formatting", "parsing", "macros"] }
rand = "0.8.5"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"
